# discord_hack

./: .gitignore  CLAUDE.md  README.md  main.py  personas.json  pyproject.toml  webhooks.json
.claude/agents/: python-ai-coder.md
docs/: arch.md  personas.md  pydantic-evals.md  pydantic-rag.md  pydantic-testing.md
kbs/: architecture.txt  default.txt  development.txt  kb.txt  project_management.txt
src/: main.py
src/discord_hack/: agent.py  config.py  conversation_store.py  dependencies.py  discord_bot.py  discord_main.py  persona_agent.py  router.py  webhook_manager.py
src/evals/: __init__.py  config.py  run_evals.py
src/evals/datasets/: README.md  router_context_selection.yaml  router_conversation_routing.yaml  router_persona_selection.yaml  router_response_format.yaml  router_structured_output.yaml
src/evals/evaluators/: __init__.py  common.py  persona_evaluators.py  router_evaluators.py
tests/: test_agent.py  test_conversation_store.py  test_conversation_threading.py  test_discord_bot.py  test_persona_config.py  test_proactive_response.py  test_router.py  test_webhook_manager.py
